--- a/locales/en.yml
+++ b/locales/en.yml
@@ -12,3 +12,7 @@ intro:
   aka: Also known as
   whats-your-name: What's your name?
 not-found: Not found
+nav:
+  house-landlord: House Landlord
+  industry-store: Industry Store
+  mobile-power-system: Mobile Power System
