--- a/locales/zh-CN.yml
+++ b/locales/zh-CN.yml
@@ -12,3 +12,7 @@ intro:
   aka: 也叫
   whats-your-name: 输入你的名字
 not-found: 未找到页面
+nav:
+  house-landlord: 户用式业主
+  industry-store: 工商业储能
+  mobile-power-system: 移动电源系统
